# fastapi-todo-list-demo

./: .dockerignore  .flake8  .gitignore  .gitreview  Dockerfile  Makefile  README.md  alembic.ini  requirements.txt  setup.cfg  setup.py  swagger.json  test-requirements.txt  tox.ini
.github/workflows/: sync2gitee.yml
etc/todolist/: celeryconfig.py.sample  gunicorn.py.sample  logging.conf.sample  supervisord.conf.sample  todolist-config-generator.conf  todolist.conf.sample
todolist/: constants.py  context.py  exception.py  main.py  utils.py  version.py
todolist/alembic/: env.py
todolist/alembic/versions/: 5c77effa862e_initial.py  64cabf244a7c_todoelem_init.py
todolist/api/: manager.py
todolist/api/v1/: __init__.py  hello.py  todoelems.py
todolist/conf/: __init__.py  base.py  cors.py  database.py  opts.py  service_user.py  todolist.py
todolist/db/: __init__.py  api.py  models.py
todolist/schemas/: todoelems.py
todolist/static/swagger-ui/: swagger-ui-bundle.js
todolist/tasks/: async_task.py  celery.py  celeryconfig.py  schedules.py
todolist/watch/: service.py  workflow.py
tools/: build_image.sh  generate_swagger.py  run_service.sh
