[metadata]
name = todolist
summary = TodoList
description-file =
    README.md
author = 99cloud
author-email = example@99cloud.net
home-page = http://www.99cloud.net
classifier =
    Environment :: 99Cloud
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[files]
packages =
    todolist

[entry_points]
oslo.config.opts =
    todolist.conf = todolist.conf.opts:list_opts

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests
